--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,9 @@
 			"command": "/usr/bin/g++",
 			"args": [
 				"-fdiagnostics-color=always",
+				"-std=c++20",
 				"-g",
+				"-O2",
 				"${file}",
 				"-o",
 				"${fileDirname}/bin/${fileBasenameNoExtension}"
