--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "environment": [],
             "externalConsole": false, //true显示外置的控制台窗口，false显示内置终端
             "MIMode": "gdb",
-            "miDebuggerPath": "/usr/bin/gdb",
+            "miDebuggerPath": "D:\\msys64\\mingw64\\bin\\gdb.exe", //gdb的路径
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
