--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,54 +1,5 @@
 {
     "files.associations": {
-        "new": "cpp",
-        "array": "cpp",
-        "deque": "cpp",
-        "vector": "cpp",
-        "string_view": "cpp",
-        "ostream": "cpp",
-        "chrono": "cpp",
-        "initializer_list": "cpp",
-        "limits": "cpp",
-        "unordered_map": "cpp",
-        "map": "cpp",
-        "atomic": "cpp",
-        "bit": "cpp",
-        "*.tcc": "cpp",
-        "cctype": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "ctime": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "set": "cpp",
-        "string": "cpp",
-        "exception": "cpp",
-        "algorithm": "cpp",
-        "functional": "cpp",
-        "iterator": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "numeric": "cpp",
-        "random": "cpp",
-        "ratio": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "iosfwd": "cpp",
-        "iostream": "cpp",
-        "istream": "cpp",
-        "numbers": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "iostream": "cpp"
     }
 }
